# AI_Arxiv_Scrapping

./: .gitignore  Lista_de_comandos_poetry.txt  README.md  arxiv_articles.csv  main.py  pyproject.toml
arxiv_scraper/: arxiv_scraper.py  base_scraper.py
