[project]
name = "ai-arxiv-scrapping"
version = "0.1.0"
description = ""
authors = [
    {name = "VictorLuizAlmeida",email = "victor.luiz.almeida@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
